# flappy-bird-in-CPP-OpenGL

./: CMakeLists.txt  Main.cpp  README.md
lib/: Renderer.hpp  Window.hpp
src/: Main.cpp  Renderer.cpp  Window.cpp
